--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,19 @@
 spring.security.user.name=prashant
 spring.security.user.password=prashant
+##logging.level.org.springframework=debug
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.jpa.defer-datasource-initialization=true
+
+#Sspring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
+#spring.jpa.defer-datasource-initialization=true this won't work here as the datasource has chagned from h2
+#to something else 
+#spring.sql.init.mode=always
+# above will run the query written in data.sql file but if exception occurs then application will fail to start
